--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -35,11 +35,15 @@
         <div class="sidebar">
             <div class="profile-summary person">
                 <div class="picture">
-                    <img class="user-photo-profil" src="" alt="Photo de profil">
+                    <img class="user-photo-profil sidebar-photo" id="sidebar-photo-profil" src="" alt="Photo de profil">
                 </div>
                 <h3 id="sidebar-nom-prenom"></h3>
                 <p id="sidebar-emploi"></p>
             </div>
+            <form class="search-bar" onsubmit="handleSearch(event)" style="margin-top:20px;">
+                <input type="text" id="sidebar-search-input" name="query" placeholder="Rechercher..." />
+                <button type="submit">Rechercher</button>
+            </form>
         </div>
 
         <div class="content">
@@ -124,6 +128,6 @@
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
     </footer>
 
-    <script src="js/userdata.js"></script>
+    <script src="../assets/js/userdata.js"></script>
 </body>
 </html>
