--- a/Piscine/pages/emplois.html
+++ b/Piscine/pages/emplois.html
@@ -36,18 +36,18 @@
 
         <!-- Barre latérale gauche : résumé profil -->
         <div class="sidebar">
-            <div class="profile-summary">
+            <div class="profile-summary person">
                 <div class="picture">
-                    <img src="../assets/images/employes/macron.jpg" alt="Photo de profil">
+                    <img class="user-photo-profil sidebar-photo" id="sidebar-photo-profil" src="" alt="Photo de profil">
                 </div>
-                <h3>Célian Hervouet</h3>
-                <p>Étudiant Ingénierie à l'ECE Paris<br><strong>ECE. École d'ingénieurs.</strong></p>
+                <h3 id="sidebar-nom-prenom"></h3>
+                <p id="sidebar-emploi"></p>
             </div>
             <ul>
-                <li><a href="#">Preferences</a></li>
-                <li><a href="#">My jobs</a></li>
-                <li><a href="#">My Career Insights</a></li>
-                <li><a href="#">Post a free job</a></li>
+                <li><a href="#">Préférences</a></li>
+                <li><a href="#">Mes jobs</a></li>
+                <li><a href="#">Mes perspectives de carrière</a></li>
+                <li><a href="#">Publier une offre</a></li>
             </ul>
         </div>
 
@@ -98,5 +98,21 @@
     <footer>
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
     </footer>
+
+    <script>
+    fetch('../backend/get_user_info.php')
+      .then(response => {
+        if (!response.ok) throw new Error('Non connecté');
+        return response.json();
+      })
+      .then(user => {
+        document.getElementById('sidebar-photo-profil').src = '../backend/uploads/' + user.photo_profil;
+        document.getElementById('sidebar-nom-prenom').textContent = user.prenom + ' ' + user.nom;
+        document.getElementById('sidebar-emploi').textContent = user.emploi;
+      })
+      .catch(() => {
+        document.querySelector('.profile-summary').innerHTML = '<p>Veuillez vous connecter.</p>';
+      });
+    </script>
 </body>
 </html>
