--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -77,6 +77,9 @@
                 <button class="fake-input-button" onclick="openModal()">Publiez une photo, vidéo ou votre CV...</button>
             </div>
 
+            <!-- Conteneur des posts publiés -->
+            <div id="posts-container"></div>
+
             <!-- Modale -->
             <div id="post-modal" class="modal">
                 <div class="modal-content">
