--- a/Piscine/pages/login.html
+++ b/Piscine/pages/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <div style="background:#000;color:#fff;width:100%;padding:20px 0 10px 0;text-align:center;font-size:2em;font-weight:500;">HireSphere<br>Login</div>
+    <div style="background:#000;color:#fff;width:100%;padding:20px 0 10px 0;text-align:center;font-size:2em;font-weight:500;">HireSphere</div>
     <main>
         <h2 style="font-size:2em; color:#111; margin:40px 0 30px 0;">Connexion</h2>
         <form action="../backend/index.php" method="POST" style="display:flex;flex-direction:column;align-items:center;gap:15px;max-width:300px;margin:0 auto;">
