--- a/Piscine/pages/emplois.html
+++ b/Piscine/pages/emplois.html
@@ -55,29 +55,29 @@
         <main class="content">
             <h2>Offres d'emploi recommandées</h2>
 
-            <div class="card">
+            <div class="card" id="offre-1">
                 <h2>Chargé de mobilisation - Tous Bénévoles</h2>
                 <p>Localisation : Nanterre (Île-de-France)<br>Type : Bénévolat<br><strong>Chaîne de l'Espoir</strong></p>
                 <div class="actions">
-                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btnblue" data-offre="1" onclick="showOfferDetail(event)">Voir l'offre</button>
                     <button class="btngray">Enregistrer</button>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="offre-2">
                 <h2>Stage Ingénieur d'Affaires - HEDON</h2>
                 <p>Localisation : Région Île-de-France<br>Durée : 6 mois<br><strong>HEDON Technologies</strong></p>
                 <div class="actions">
-                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btnblue" data-offre="2" onclick="showOfferDetail(event)">Voir l'offre</button>
                     <button class="btngray">Enregistrer</button>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="offre-3">
                 <h2>Stage Thermique - Stellantis</h2>
                 <p>Localisation : Poissy (On-site)<br>Durée : 6 mois<br><strong>Stellantis</strong></p>
                 <div class="actions">
-                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btnblue" data-offre="3" onclick="showOfferDetail(event)">Voir l'offre</button>
                     <button class="btngray">Enregistrer</button>
                 </div>
             </div>
@@ -98,6 +98,15 @@
     <footer>
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
     </footer>
+
+    <!-- Modale de détail d'offre -->
+    <div id="offer-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeOfferModal()">&times;</span>
+            <h3 id="modal-offre-titre"></h3>
+            <div id="modal-offre-description" style="margin: 15px 0;"></div>
+        </div>
+    </div>
 
     <script>
     fetch('../backend/get_user_info.php')
